[package]
name = "nmp_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nmp_server"
path = "src/main.rs"

[[bin]]
name = "nmp_tests"
path = "src/test_programs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures-util = { version = "0.3.29", features = ["sink"] }
env_logger = "0.10.0"
clap = { version = "4.5.17", features=["derive"] }

